argo/wailord/home-automation/frigate/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    tailscale.com/proxy-class: "jscknet"
  name: frigate
spec:
  ingressClassName: tailscale
  rules:
    - host: frigate
      http:
        paths:
          - backend:
              service:
                name: frigate
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - frigate
status:
  loadBalancer:
    ingress:
      - hostname: frigate.fawn-mamba.ts.net
        ports:
          - port: 443
            protocol: TCP
